--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mui/material": "^5.15.21",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
@@ -27,6 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
