--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-component": "^2.8.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "sweetalert2": "^11.12.2",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
