--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
+    "@react-google-maps/api": "^2.19.3",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^10.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-component": "^2.8.0",
