--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@react-google-maps/api": "^2.19.3",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
+    "lodash": "^4.17.21",
     "next": "^14.2.4",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
